<resources>
    <string name="app_name">Coutloot</string>
    <string name="show_assured_only">Show the assured products only</string>
    <string name="sort_by">Sort By</string>
    <string name="select">Select</string>
    <string name="filters">Filters</string>
    <string name="nearbuy">Nearbuy</string>
    <string name="hurry_up">Hurry Up !</string>
    <string name="more_colors">More Colors</string>
    <string name="live">\u2022 LIVE</string>
    <string name="flash_sale">Flash sale is live now</string>
    <string name="prod_spec">Product Specification</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="available_offers">Available Offers</string>
    <string name="seller">About Seller</string>
</resources>
